tests/expectations/compiler/const_prop/evaluate_const_fail.out
Error [ECMP0376007]: The value of this const could not be determined at compile time.
    --> compiler-test:6:9
     |
   6 |         const SOME: u32 = a + 1u32;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
